--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 <h1>welcome to stackroute</h1>
 	<article>
 	<img src="C:\Users\TEJASWINISHET\Pictures\Saved Pictures\tej.png" alt="javascript"/>
+        <h1>hiiiiiii</h1>
 
 	<ul class="meta">
 		<div clas="post_info">
+		
 		<li>
-			<a href="#">article</a>
-		</li>
-		<li>
-			<a href="#">web roundups</a>
+			<a href="#">web rous</a>
 		</li></ul>
 	</div>
 		<p> 
